# mayonnaise

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  build.py  index.md
assets/css/: style.css  style.scss
docs/: index.md
src/: builtin.cpp  builtin.hpp  command.hpp  construct.cpp  construct.hpp  error.cpp  error.hpp  exprtk.hpp  file.cpp  file.hpp  interpreter.cpp  parser.cpp  parser.hpp  runtime.cpp  runtime.hpp  strh.cpp  strh.hpp  versioncontrol.cpp  versioncontrol.hpp
src/lib/: exprtk.hpp
